# tabled

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  docs.rs.md  main.html
csv_to_table/: Cargo.toml  README.md
csv_to_table/examples/: csv_table.rs  iter.rs  orientation.rs  table.rs
csv_to_table/src/: lib.rs  records.rs  table.rs
csv_to_table/tests/: csv_table.rs  iter.rs  test_orientation_modes.rs  test_table.rs  test_types.rs
examples/show/: Cargo.toml
examples/show/src/: config.rs  main.rs
json_to_table/: COPYING  Cargo.toml  README.md
json_to_table/examples/: collapse.rs  json_collapse.rs  json_plain.rs  json_to_table.rs  json_width.rs  orientation.rs  reader.rs
json_to_table/src/: lib.rs  table.rs
json_to_table/src/table/: collapsed_table.rs  mod.rs  plain_table.rs
json_to_table/tests/: test_config.rs  test_orientation_modes.rs  test_parse.rs  test_table.rs  test_types.rs
papergrid/: Cargo.toml  README.md
papergrid/examples/: color.rs  color_map.rs  colored_border.rs  common_grid.rs  common_grid_no_std.rs  compact_grid.rs  hello_world.rs  iter_grid.rs  no_std.rs  papergrid_color.rs  peekable_grid.rs  span_usage.rs  writable_grid.rs
papergrid/examples/colored_backend/: Cargo.toml
papergrid/src/: ansi_color.rs  border.rs  borders.rs  colors.rs  entity.rs  entity_map.rs  grid.rs  grid_projection.rs  lib.rs  symbol.rs  util.rs
papergrid/src/ansi/: ansi_buf.rs  ansi_str.rs  mod.rs
papergrid/src/color/: ansi_color.rs  mod.rs  static_color.rs
papergrid/src/colors/: mod.rs  nocolors.rs
papergrid/src/config/: alignment.rs  border.rs  borders.rs  cell_config.rs  entity.rs  entity_map.rs  formatting.rs  horizontal_line.rs  indent.rs  line.rs  mod.rs  offset.rs  position.rs  sides.rs  vertical_line.rs
papergrid/src/dimension/: compact.rs  exact_dimension.rs  iterable.rs  mod.rs  peekable.rs  spanned.rs  spanned_vec_records.rs  width_func.rs
papergrid/src/estimation/: height.rs  mod.rs  width.rs  width_func.rs
papergrid/src/grid/: compact.rs  iterable.rs  mod.rs  peekable.rs
papergrid/src/records/: cell_info.rs  empty.rs  exact_records.rs  into_records.rs  iter_records.rs  mod.rs  peekable_records.rs  records_info.rs  records_info_colored.rs  small_records.rs  tcell.rs  vec_records.rs
papergrid/src/util/: mod.rs  string.rs
papergrid/tests/: column_span.rs  extract.rs  format_configuration.rs  main.rs  override_split_line.rs  render.rs  row_span.rs  settings.rs  styling.rs  util.rs
papergrid/tests/grid/: column_span.rs  format_configuration.rs  mod.rs  peekable_grid.rs  render.rs  row_span.rs  settings.rs  styling.rs
papergrid/tests/util/: grid_builder.rs  mod.rs
readme/: Cargo.toml
readme/src/: main.rs
ron_to_table/: Cargo.toml  README.md
ron_to_table/examples/: collapse.rs  ron_plain.rs
ron_to_table/src/: lib.rs  table.rs
ron_to_table/tests/: collapse_tests.rs  plain_tests.rs
static_table/: Cargo.toml  README.md
static_table/examples/: static_pool_table.rs  static_table.rs  table.rs
static_table/examples/use_in_docs/: Cargo.toml
static_table/src/: lib.rs  pool_table.rs  static_table.rs
static_table/tests/: alignment.rs  margin.rs  padding.rs  pool_table.rs  static_table.rs  syntax.rs  theme.rs
table_to_html/: Cargo.toml  README.md
table_to_html/examples/: attributes.rs  basic.rs  custom_cell_logic.rs  html.rs
table_to_html/src/: html.rs  lib.rs
table_to_html/src/html/: attr.rs  html_element.rs  mod.rs  value.rs
table_to_html/tests/: html.rs  table.rs
tabled/: Cargo.toml  README.md
tabled/benches/functions/: Cargo.toml
tabled/benches/lib_comp/: Cargo.toml  README.md
tabled/examples/: README.md  alphabet.rs  basic.rs  border_text.rs  builder.rs  builder_index.rs  chess.rs  col_row_macros.rs  color.rs  colored_borders.rs  colored_padding.rs  colorization.rs  column_names.rs  compact_table.rs  compact_table2.rs  compact_table_2.rs  compact_table_3.rs  concat.rs  cowsay.rs  custom_style.rs  disable.rs  extended_display.rs  extract.rs  format.rs  formatting.rs  formatting_settings.rs  grid_colors.rs  height.rs  highlight.rs  highlight_color.rs  hyperlink.rs  interactive.rs  iter_table.rs  layout.rs  letter_case.rs  margin.rs  matrix.rs  merge_duplicates.rs  merge_duplicates1.rs  merge_duplicates2.rs  (+28 more)
tabled/examples/derive/: crate.rs  crate_override.rs  display_type.rs  display_with.rs  display_with_option.rs  format.rs  format2.rs  format_enum.rs  inline.rs  inline_enum.rs  map.rs  map_inlined.rs  order.rs  rename.rs  rename_all.rs  skip.rs
tabled/examples/show/: Cargo.toml
tabled/examples/terminal_size/: Cargo.toml
tabled/examples/terminal_size2/: Cargo.toml
tabled/locales/: extended.yaml
tabled/src/: derive.rs  lib.rs  tabled.rs
tabled/src/assert/: mod.rs
tabled/src/builder/: index_builder.rs  mod.rs  table_builder.rs
tabled/src/derive/: mod.rs
tabled/src/grid/: colored_config.rs  compact_multiline_config.rs  mod.rs
tabled/src/iter/: layout_iterator.rs  mod.rs
tabled/src/macros/: col.rs  row.rs
tabled/src/records/: mod.rs  resizable.rs  vec_records.rs
tabled/src/settings/: cell_option.rs  mod.rs  modify.rs  (+2 more)
tabled/tests/: alignment_test.rs  builder_test.rs  col_row_test.rs  compact_table.rs  concat_test.rs  derive_test.rs  disable_test.rs  extended_table_test.rs  extract_test.rs  format_test.rs  height_test.rs  highlingt_test.rs  index_test.rs  iter_table.rs  main.rs  margin_test.rs  merge_test.rs  padding_test.rs  panel_test.rs  pool_table.rs  render_settings.rs  rotate_test.rs  shadow_test.rs  span_test.rs  span_tests_qc.rs  split_test.rs  style_test.rs  table_test.rs  util.rs  width_test.rs
tabled_color/: Cargo.toml
tabled_derive/: Cargo.toml
tabled_derive/src/: attributes.rs  casing_style.rs  error.rs  lib.rs  parse.rs
testing_table/: Cargo.toml  README.md
testing_table/src/: lib.rs  macros.rs  util.rs
toml_to_table/: Cargo.toml  README.md
toml_to_table/examples/: toml_collapse.rs  toml_plain.rs  toml_to_string.rs  toml_to_string_collapsed.rs
toml_to_table/src/: lib.rs
toml_to_table/tests/: collapse_tests.rs  plain_tests.rs
(+571 files in other folders)
