[package]
name = "benchs"
version = "0.0.0"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
edition = "2018"
description = "An easy to use library for pretty print tables of Rust `struct`s and `enum`s."
repository = "https://github.com/zhiburt/tabled"
homepage = "https://github.com/zhiburt/tabled"
license = "MIT"

[dependencies]
tabled = { git = "https://github.com/zhiburt/tabled/", rev = "9a859e313a6f5ac77d64e0ff71ff88353e2de134", default-features = false, package = "tabled" }
tabled_master = { version = "0.8.0", default-features = false, package = "tabled" }

tabled_color = { path = "./tabled_color" }

nu-table = "0.63.0"
nu-protocol = "0.63.0"
nu-ansi-term = "0.45.1"

cli-table = "0.4.7"

comfy-table = "5.0.1"

term-table = "1.3.2"

prettytable-rs = "0.8.0"

[dev-dependencies]
criterion = "0.3.5"
owo-colors = "3.4.0"

[[bench]]
name = "benchmark"
harness = false
