[package]
name = "tabled"
version = "0.8.0"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
edition = "2018"
description = "An easy to use library for pretty print tables of Rust `struct`s and `enum`s."
repository = "https://github.com/zhiburt/tabled"
homepage = "https://github.com/zhiburt/tabled"
documentation = "https://docs.rs/tabled"
license = "MIT"
keywords = ["table", "print", "pretty-table", "format", "terminal"]
categories = ["text-processing", "visualization"]
readme = "README.md"

[badges]
coveralls = { repository = "https://github.com/zhiburt/tabled", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[workspace]
members = [
    "papergrid",
    "tabled_derive",
    "examples/table_with_terminal_width",
    "examples/show",
    "benches",
]

[features]
default = ["derive"]
derive = ["tabled_derive"]
color = ["papergrid/color", "ansi-str"]

[dependencies]
papergrid = "0.5.1"
unicode-width = "0.1.9"
tabled_derive = { version = "0.4.0", optional = true }
ansi-str = { version = "0.3.0", optional = true }
vte-ansi-tools = { git = "https://github.com/dandavison/vte-ansi-tools.git", branch = "main" }

[dev-dependencies]
owo-colors = "3.4.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[[example]]
name = "colored_borders"
required-features = ["color", "derive"]

[[example]]
name = "color"
required-features = ["color", "derive"]

[[example]]
name = "rename_all"
path = "examples/derive/rename_all.rs"
required-features = ["derive"]

[[example]]
name = "rename"
path = "examples/derive/rename.rs"
required-features = ["derive"]

[[example]]
name = "order"
path = "examples/derive/order.rs"
required-features = ["derive"]

[[example]]
name = "skip"
path = "examples/derive/skip.rs"
required-features = ["derive"]

[[example]]
name = "inline"
path = "examples/derive/inline.rs"
required-features = ["derive"]

[[example]]
name = "inline_enum"
path = "examples/derive/inline_enum.rs"
required-features = ["derive"]

[[example]]
name = "display_with"
path = "examples/derive/display_with.rs"
required-features = ["derive"]

[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = ["derive"]

[[example]]
name = "builder_index"
path = "examples/builder_index.rs"
required-features = ["derive"]

[[example]]
name = "concat"
path = "examples/concat.rs"
required-features = ["derive"]

[[example]]
name = "custom_style"
path = "examples/custom_style.rs"
required-features = ["derive"]

[[example]]
name = "expanded_display"
path = "examples/expanded_display.rs"
required-features = ["derive"]

[[example]]
name = "extract"
path = "examples/extract.rs"
required-features = ["derive"]

[[example]]
name = "format"
path = "examples/format.rs"
required-features = ["derive"]

[[example]]
name = "panel"
path = "examples/panel.rs"
required-features = ["derive"]

[[example]]
name = "rotate"
path = "examples/rotate.rs"
required-features = ["derive"]

[[example]]
name = "nested_table_2"
path = "examples/nested_table_2.rs"
required-features = ["derive"]

[[example]]
name = "nested_table_3"
path = "examples/nested_table_3.rs"
required-features = ["derive"]

[[example]]
name = "padding_color"
path = "examples/padding_color.rs"
required-features = ["color", "derive"]

# To run it locally (probably need to `add #![feature(doc_cfg)]` to the crate attributes to enable.
#
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly -Zunstable-options doc --no-deps --all-features --open
[package.metadata.docs.rs]
features = ["unstable-doc"]
cargo-args = ["-Zunstable-options"]
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]
