[package]
name = "csv_to_table"
version = "0.2.0"
edition = "2018"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
repository = "https://github.com/zhiburt/tabled"
homepage = "https://github.com/zhiburt/tabled"
documentation = "https://docs.rs/csv_to_table"
keywords = ["table", "print", "pretty-table", "format", "csv"]
categories = ["text-processing", "visualization"]
readme = "README.md"
description = "A library for pretty print CSV as a table"
license = "MIT"

[features]
color = ["tabled/color"]

[dependencies]
csv = "1"
tabled = { version = "0.11", features = ["std"], default-features = false }
