[package]
name = "json_to_table"
version = "0.6.0"
edition = "2018"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
repository = "https://github.com/zhiburt/tabled"
homepage = "https://github.com/zhiburt/tabled"
documentation = "https://docs.rs/json_to_table"
keywords = ["table", "print", "pretty-table", "format", "json"]
categories = ["text-processing", "visualization"]
readme = "README.md"
description = "A library for pretty print JSON as a table"
license = "MIT"

[features]
color = ["tabled/color"]

[dependencies]
serde_json = "1"
tabled = { version = "0.12", features = ["macros"], default-features = false }

[dev-dependencies]
testing_table = { path = "../testing_table" }