[package]
name = "papergrid"
version = "0.15.0"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
edition = "2018"
description = "Papergrid is a core library to print a table"
repository = "https://github.com/zhiburt/tabled"
license = "MIT"

[features]
default = ["std"]
std = ["ahash"]
ansi = ["ansi-str", "ansitok"]

[dependencies]
unicode-width = "0.2"
bytecount = "0.6"
ansi-str = { version = "0.9", optional = true }
ansitok = { version = "0.3", optional = true  }

[dependencies.ahash]
version = "0.8"
optional = true
default-features = false
# `compile-time-rng` is necessary to allow building on wasm32,
# we cannot use `runtime-rng` for platforms due to this known bug:
# https://github.com/rust-lang/cargo/issues/1197
features = ["std", "compile-time-rng"]

[dev-dependencies]
testing_table = { version = "0.2", features = ["ansi"] }

[[example]]
name = "papergrid_color"
required-features = ["std", "ansi"]

[[example]]
name = "peekable_grid"
required-features = ["std"]

[[example]]
name = "iter_grid"
required-features = ["std"]

[[example]]
name = "color_map"
required-features = ["std"]

[[example]]
name = "colored_border"
required-features = ["std"]

[[example]]
name = "compact_grid"
required-features = ["std"]

[[example]]
name = "span_usage"
required-features = ["std"]

[[example]]
name = "no_std"
required-features = []

[[example]]
name = "hello_world"
required-features = ["std"]

