[package]
name = "papergrid"
version = "0.17.0"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
edition = "2018"
description = "Papergrid is a core library to print a table"
repository = "https://github.com/zhiburt/tabled"
license = "MIT"

[features]
default = ["std"]
std = ["fnv"]
ansi = ["ansi-str", "ansitok"]

[dependencies]
unicode-width = "0.2"
bytecount = "0.6"
ansi-str = { git = "https://github.com/zhiburt/ansi-str/", rev = "cf2b7a2cddfbb4aabf44dcc6f25a7b8bbb991d7d", optional = true }
ansitok = { git = "https://gitlab.com/zhiburt/ansitok/", rev = "099ebf7960bd298f0154d793720741f8cd1e898b", optional = true  }
fnv = { version = "1.0", optional = true }

[dev-dependencies]
testing_table = { version = "0.2", features = ["ansi"] }

[[example]]
name = "papergrid_color"
required-features = ["std", "ansi"]

[[example]]
name = "peekable_grid"
required-features = ["std"]

[[example]]
name = "iter_grid"
required-features = ["std"]

[[example]]
name = "writable_grid"
required-features = ["std"]

[[example]]
name = "color_map"
required-features = ["std"]

[[example]]
name = "colored_border"
required-features = ["std"]

[[example]]
name = "compact_grid"
required-features = ["std"]

[[example]]
name = "span_usage"
required-features = ["std"]

[[example]]
name = "no_std"
required-features = []

[[example]]
name = "hello_world"
required-features = ["std"]

