[package]
name = "ron_to_table"
version = "0.7.0"
edition = "2018"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
repository = "https://github.com/zhiburt/tabled"
homepage = "https://github.com/zhiburt/tabled"
documentation = "https://docs.rs/ron_to_table"
keywords = ["table", "print", "pretty-table", "format", "ron"]
categories = ["text-processing", "visualization"]
readme = "README.md"
description = "A library for pretty print RON as a table"
license = "MIT"

[features]
ansi = ["tabled/ansi"]
derive = ["tabled/derive"]
macros = ["tabled/macros"]

[dependencies]
ron = "0.10"
tabled = { path = "../tabled", features = ["std"], default-features = false }

[dev-dependencies]
tabled = { path = "../tabled", features = ["std", "assert"], default-features = false }
