[package]
name = "static_table"
version = "0.2.0"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
edition = "2018"
description = "Library creates pretty tables at compiler time"
repository = "https://github.com/zhiburt/tabled"
homepage = "https://github.com/zhiburt/tabled"
documentation = "https://docs.rs/static_table"
keywords = ["table", "print", "pretty-table", "macros", "macro"]
categories = ["text-processing", "visualization"]
license = "MIT"

[lib]
proc-macro = true

[features]
color = ["tabled/color"]

[dependencies]
tabled = { version = "0.12", features = ["std"], default-features = false }
syn = { version = "1", features = ["parsing"] }
quote = "1"
proc-macro2 = "1"
proc-macro-error = "1.0.4"
