[package]
name = "static_table"
version = "0.3.0"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
edition = "2018"
description = "Library creates pretty tables at compiler time"
repository = "https://github.com/zhiburt/tabled"
homepage = "https://github.com/zhiburt/tabled"
documentation = "https://docs.rs/static_table"
keywords = ["table", "print", "pretty-table", "macros", "macro"]
categories = ["text-processing", "visualization"]
license = "MIT"

[lib]
proc-macro = true

[features]
ansi = ["tabled/ansi"]
derive = ["tabled/derive"]
macros = ["tabled/macros"]

[dependencies]
tabled = { version = "0.15", features = ["std"], default-features = false }
syn = { version = "1", features = ["parsing"] }
quote = "1"
proc-macro2 = "1"
proc-macro-error = "1.0"

[dev-dependencies]
testing_table = { path = "../testing_table", features = ["ansi"] }
