[package]
name = "table_to_html"
version = "0.2.0"
edition = "2018"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
description = "The library provides a interface to convert a `tabled::Table` into a HTML table (`<table>`)."
repository = "https://github.com/zhiburt/tabled"
license = "MIT"

[dependencies]
tabled = { path = "../tabled", features = ["std"], default-features = false }

[dev-dependencies]
tabled = { path = "../tabled", features = ["std", "derive"], default-features = false }
