[package]
name = "table_to_html"
version = "0.8.0"
edition = "2018"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
description = "The library provides a interface to convert a `tabled::Table` into a HTML table (`<table>`)."
repository = "https://github.com/zhiburt/tabled"
homepage = "https://github.com/zhiburt/tabled"
documentation = "https://docs.rs/table_to_html"
keywords = ["table", "print", "pretty-table", "format", "html"]
categories = ["text-processing", "visualization"]
license = "MIT"

[features]
ansi = ["tabled/ansi"]
derive = ["tabled/derive"]
macros = ["tabled/macros"]

[dependencies]
tabled = { version = "0.19", features = ["std"], default-features = false }

[dev-dependencies]
tabled = { version = "0.19", features = ["std", "derive", "assert"], default-features = false }
