[package]
name = "tabled"
version = "0.15.0"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
edition = "2018"
description = "An easy to use library for pretty print tables of Rust `struct`s and `enum`s."
repository = "https://github.com/zhiburt/tabled"
homepage = "https://github.com/zhiburt/tabled"
documentation = "https://docs.rs/tabled"
license = "MIT"
keywords = ["table", "print", "pretty-table", "format", "terminal"]
categories = ["text-processing", "visualization"]
readme = "README.md"
rust-version = "1.61.0"

[badges]
coveralls = { repository = "https://github.com/zhiburt/tabled", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[[example]]
name = "color"
required-features = ["ansi", "derive"]

[[example]]
name = "colored_borders"
required-features = ["derive"]

[[example]]
name = "colored_padding"
path = "examples/colored_padding.rs"
required-features = ["ansi", "derive"]

[[example]]
name = "disable"
required-features = ["derive"]

[[example]]
name = "rename_all"
path = "examples/derive/rename_all.rs"
required-features = ["derive"]

[[example]]
name = "rename"
path = "examples/derive/rename.rs"
required-features = ["derive"]

[[example]]
name = "order"
path = "examples/derive/order.rs"
required-features = ["derive"]

[[example]]
name = "skip"
path = "examples/derive/skip.rs"
required-features = ["derive"]

[[example]]
name = "inline"
path = "examples/derive/inline.rs"
required-features = ["derive"]

[[example]]
name = "inline_enum"
path = "examples/derive/inline_enum.rs"
required-features = ["derive"]

[[example]]
name = "display_with"
path = "examples/derive/display_with.rs"
required-features = ["derive"]

[[example]]
name = "crate_override"
path = "examples/derive/crate_override.rs"
required-features = ["derive"]

[[example]]
name = "derive_format"
path = "examples/derive/format.rs"
required-features = ["derive"]

[[example]]
name = "table"
path = "examples/table.rs"
required-features = ["derive"]

[[example]]
name = "builder_index"
path = "examples/builder_index.rs"
required-features = ["derive"]

[[example]]
name = "concat"
path = "examples/concat.rs"
required-features = ["derive"]

[[example]]
name = "custom_style"
path = "examples/custom_style.rs"
required-features = ["derive"]

[[example]]
name = "extended_display"
path = "examples/extended_display.rs"
required-features = ["derive"]

[[example]]
name = "extract"
path = "examples/extract.rs"
required-features = ["derive"]

[[example]]
name = "format"
path = "examples/format.rs"
required-features = ["derive"]

[[example]]
name = "panel"
path = "examples/panel.rs"
required-features = ["derive"]

[[example]]
name = "rotate"
path = "examples/rotate.rs"
required-features = ["derive"]

[[example]]
name = "shadow"
path = "examples/shadow.rs"
required-features = ["macros"]

[[example]]
name = "nested_table_2"
path = "examples/nested_table_2.rs"
required-features = ["derive"]

[[example]]
name = "nested_table_3"
path = "examples/nested_table_3.rs"
required-features = ["derive"]

[[example]]
name = "col_row_macros"
path = "examples/col_row_macros.rs"
required-features = ["macros", "derive"]

[[example]]
name = "merge_duplicates"
path = "examples/merge_duplicates.rs"
required-features = ["derive"]

[[example]]
name = "merge_duplicates_2"
path = "examples/merge_duplicates_2.rs"
required-features = ["derive"]

[[example]]
name = "hyperlink"
path = "examples/hyperlink.rs"
required-features = ["derive", "ansi"]

[[example]]
name = "highlight"
path = "examples/highlight.rs"
required-features = ["std"]

[[example]]
name = "highlight_color"
path = "examples/highlight_color.rs"
required-features = ["std"]

[[example]]
name = "border_text"
path = "examples/border_text.rs"
required-features = ["std"]

[[example]]
name = "span"
path = "examples/span.rs"
required-features = ["std"]

[[example]]
name = "nested_table"
path = "examples/nested_table.rs"
required-features = ["std"]

[[example]]
name = "builder"
path = "examples/builder.rs"
required-features = ["std"]

[[example]]
name = "table_width"
path = "examples/table_width.rs"
required-features = ["std"]

[[example]]
name = "table_width_2"
path = "examples/table_width_2.rs"
required-features = ["std"]

[[example]]
name = "height"
path = "examples/height.rs"
required-features = ["std"]

[[example]]
name = "margin"
path = "examples/margin.rs"
required-features = ["std"]

[[example]]
name = "iter_table"
path = "examples/iter_table.rs"
required-features = ["std"]

[[example]]
name = "matrix"
path = "examples/matrix.rs"
required-features = ["std"]

[[example]]
name = "formatting_settings"
path = "examples/formatting_settings.rs"
required-features = ["std"]

[[example]]
name = "settings_list"
path = "examples/settings_list.rs"
required-features = ["derive"]

[[example]]
name = "grid_colors"
path = "examples/grid_colors.rs"
required-features = ["derive"]

[[example]]
name = "compact_table"
path = "examples/compact_table.rs"
required-features = []

[[example]]
name = "compact_table_2"
path = "examples/compact_table_2.rs"
required-features = []

[[example]]
name = "alphabet"
path = "examples/alphabet.rs"
required-features = ["std"]

[[example]]
name = "split"
path = "examples/split.rs"
required-features = ["std", "macros"]

[[example]]
name = "pool_table"
path = "examples/pool_table.rs"
required-features = ["std"]

[[example]]
name = "pool_table2"
path = "examples/pool_table2.rs"
required-features = ["std"]

[[example]]
name = "column_names"
path = "examples/column_names.rs"
required-features = ["std", "derive"]

[[example]]
name = "colorization"
path = "examples/colorization.rs"
required-features = ["std", "derive"]

[[example]]
name = "chess"
path = "examples/chess.rs"
required-features = ["std"]

[[example]]
name = "target_content"
path = "examples/target_content.rs"
required-features = ["std", "derive"]

[[example]]
name = "style_modern_rounded"
path = "examples/style_modern_rounded.rs"
required-features = ["std"]

[[example]]
name = "reverse"
path = "examples/reverse.rs"
required-features = ["std"]

[[example]]
name = "theme"
path = "examples/theme.rs"
required-features = ["derive", "std"]

[features]
default = ["derive", "macros"]
std = ["papergrid/std"]
derive = ["tabled_derive", "std"]
ansi = ["papergrid/ansi", "ansi-str", "ansitok", "std"]
macros = ["std"]

[dependencies]
papergrid = { version = "0.11", default-features = false }
tabled_derive = { path = "../tabled_derive", optional = true }
ansi-str = { version = "0.8", optional = true }
ansitok = { version = "0.2", optional = true }
unicode-width = "0.1"

[dev-dependencies]
owo-colors = "3.5"
testing_table = { path = "../testing_table", features = ["ansi"] }

# To run it locally (probably need to `add #![feature(doc_cfg)]` to the crate attributes to enable.
#
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly -Zunstable-options doc --no-deps --all-features --open
[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]
