[package]
name = "tabled_color"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tabled = { git = "https://github.com/zhiburt/tabled/", rev = "0f5bb6e21d674cba0b1bcc662cd2fe4eebb55acd", features = ["color"] }
