[package]
name = "tabled_color"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tabled = { git = "https://github.com/zhiburt/tabled/", rev = "308cdca66ad2dac07f83ab3eba9e289819d5782c", features = ["color"], default-features = false, package = "tabled" }
