[package]
name = "tabled_derive"
version = "0.7.0"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
edition = "2018"
description = "Derive macros which is used by tabled crate"
repository = "https://github.com/zhiburt/tabled"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "1"
quote = "1"
proc-macro2 = "1"
heck = "0.4"
proc-macro-error = "1.0"