[package]
name = "tabled_derive"
version = "0.11.0"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
edition = "2018"
description = "Derive macros which is used by tabled crate"
repository = "https://github.com/zhiburt/tabled"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "visit-mut", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
heck = "0.5"
proc-macro-error2 = "2.0.1"
