[package]
name = "toml_to_table"
version = "0.6.0"
edition = "2018"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
repository = "https://github.com/zhiburt/tabled"
homepage = "https://github.com/zhiburt/tabled"
documentation = "https://docs.rs/ron_to_table"
keywords = ["table", "print", "pretty-table", "format", "toml"]
categories = ["text-processing", "visualization"]
readme = "README.md"
description = "A library for pretty print TOML as a table"
license = "MIT"

[features]
ansi = ["tabled/ansi"]
derive = ["tabled/derive"]
macros = ["tabled/macros"]

[dependencies]
toml = "0.8"
tabled = { version = "0.18", features = ["std"], default-features = false }

[dev-dependencies]
testing_table = { version = "0.2", features = ["ansi"] }
