[package]
name = "benches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]

[dev-dependencies]
tabled = { path = "../../..", features = ["ansi"] }
tabled_master = { version = "0.10.0", features = ["ansi"], package = "tabled"}

owo-colors = "3.5.0"
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "strings"
harness = false

[[bench]]
name = "to_string"
harness = false
