[package]
name = "benches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
tabled = { path = "../..", features = ["ansi"] }

[[bench]]
name = "strings"
harness = false

[[bench]]
name = "to_string"
harness = false
